Code clean up & unification